worked on the overflow thing, and fixed a bug with LWN

--- a/app/assets/stylesheets/feed.scss
+++ b/app/assets/stylesheets/feed.scss
@@ -17,3 +17,12 @@ a {
 .small {
 	font-size: 11px;
 }
+
+.overflow {
+	display: none;
+}
+
+a.see_more {
+	text-decoration: underline;
+	cursor: pointer;
+}
